# burn-ssd-mobilenetv3-fpnlite

./: .gitignore  Cargo.toml  README.md
lib/mobilenetv3/: Cargo.toml
lib/mobilenetv3/src/: imagenet.rs  lib.rs
lib/mobilenetv3/src/model/: activation.rs  conv_bn_activation.rs  identity.rs  inverted_residual.rs  mobilenetv3.rs  mod.rs  squeeze_excitation.rs  util.rs  weights.rs
lib/transforms/: Cargo.toml
lib/transforms/src/: lib.rs
scripts/: inspect-mobilenetv3.py
