[workspace]
members = [
    "lib/mobilenetv3",
    "bin/mobilenetv3-cli"
]

resolver = "2"

[workspace.package]
#name = "burn-ssd-mobilenet-fpnlite-320x320"
version = "0.1.0"
edition = "2021"
authors = ["Sergey 'Jin' Bostandzhyan"]
readme = "README.md"
publish = false

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", branch = "main", features = ["train", "wgpu"] }
burn-import = { package = "burn-import", git = "https://github.com/tracel-ai/burn.git", branch = "main" }
image = { version = "0.25.5", features = [ "png", "jpeg" ] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
