[workspace]
members = [
    "lib/mobilenetv3",
    "lib/transforms",
    "bin/mobilenetv3-cli"
]

resolver = "2"

[workspace.package]
#name = "burn-ssd-mobilenet-fpnlite-320x320"
version = "0.1.0"
edition = "2021"
authors = ["Sergey 'Jin' Bostandzhyan"]
readme = "README.md"
publish = false

[workspace.dependencies]
burn = { version = "0.19", features = ["train", "wgpu"] }
burn-import = "0.19"
image = { version = "0.25.5", features = [ "png", "jpeg" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
